<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity1"
    android:background="@color/a">



   <EditText
       android:textColor="@color/b"
       android:id="@+id/edittext"
       android:layout_width="fill_parent"
       android:layout_height="@dimen/size1"
       android:hint="@string/name1"
       android:textSize="@dimen/size2"
       />

    <LinearLayout android:orientation="horizontal" android:layout_below="@+id/edittext"
        android:layout_width="fill_parent"
        android:id="@+id/LO1"
        android:layout_height="@dimen/size4">
        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/size3"
            android:text="@string/seven"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent"
            />
        <Button


            android:id="@+id/eight"
            android:layout_width="@dimen/size3"
            android:text="@string/eight"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button

            android:id="@+id/nine"
            android:layout_width="@dimen/size3"
            android:text="@string/nine"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button

            android:id="@+id/div"
            android:layout_width="@dimen/size3"
            android:text="@string/div"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_below="@+id/LO1"
        android:layout_width="fill_parent"
        android:id="@+id/LO2"
        android:layout_height="@dimen/size4">
        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/size3"
            android:text="@string/four"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/size3"
            android:text="@string/five"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/size3"
            android:text="@string/six"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/mul"
            android:layout_width="@dimen/size3"
            android:text="@string/mul"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_below="@+id/LO2"
        android:layout_width="fill_parent"
        android:id="@+id/LO3"
        android:layout_height="@dimen/size4">
        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/size3"
            android:text="@string/one"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/size3"
            android:text="@string/two"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/size3"
            android:text="@string/three"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/add"
            android:layout_width="@dimen/size3"
            android:text="@string/add"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_below="@+id/LO3"
        android:layout_width="fill_parent"
        android:id="@+id/LO4"
        android:layout_height="@dimen/size4">
        <Button
            android:id="@+id/clear"
            android:layout_width="@dimen/size3"
            android:text="@string/clear"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/size3"
            android:text="@string/zero"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/equals"
            android:layout_width="@dimen/size3"
            android:text="@string/equals"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/sub"
            android:layout_width="@dimen/size3"
            android:text="@string/sub"
            android:textSize="@dimen/size2"
            android:layout_height="match_parent" />

    </LinearLayout>






    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

</RelativeLayout>
